--- a/packages/unified-server/.env.production
+++ b/packages/unified-server/.env.production
@@ -2,11 +2,13 @@
 # Server URL here.
 VITE_CONNECTION_SERVER_URL=/connection/
 VITE_LANGUAGE_PACK=@breadboard-ai/shared-ui/strings/en_US
-VITE_ASSET_PACK=/icons/
-VITE_FONT_FACE_MONO="Courier New", Courier, monospace
-VITE_FONT_FACE="Helvetica Neue", Helvetica, Arial, sans-serif
-VITE_ENABLE_TOS=false
-VITE_TOS_HTML_PATH=""
+VITE_ASSET_PACK=langs/icons
+VITE_FONT_FACE_MONO="Google Sans Code", "Courier New", Courier, monospace
+VITE_FONT_FACE="Google Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
+VITE_ENABLE_TOS=true
+VITE_TOS_HTML_PATH="public/tos.html"
 VITE_ENVIRONMENT_NAME="prod"
 # Uncomment when ready to disable all non-A2 module invocations.
 # VITE_NO_3P_MODULES="true"
+
+VITE_FONT_LINK="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&display=block"
