--- a/packages/unified-server/.env.production
+++ b/packages/unified-server/.env.production
@@ -2,6 +2,7 @@
 # Server URL here.
 VITE_CONNECTION_SERVER_URL=/connection/
 VITE_LANGUAGE_PACK=@breadboard-ai/shared-ui/strings/en_US
-VITE_ASSET_PACK=/icons/
-VITE_FONT_FACE_MONO="Courier New", Courier, monospace
-VITE_FONT_FACE="Helvetica Neue", Helvetica, Arial, sans-serif
+VITE_ASSET_PACK=langs/icons
+VITE_FONT_FACE_MONO="Google Sans Code", "Courier New", Courier, monospace
+VITE_FONT_FACE="Google Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
+VITE_FONT_LINK="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&display=block"
