--- a/packages/visual-editor/.env.development
+++ b/packages/visual-editor/.env.development
@@ -1,5 +1,5 @@
 VITE_CONNECTION_SERVER_URL=http://localhost:5555
-VITE_LANGUAGE_PACK=@breadboard-ai/shared-ui/strings/en_US
-VITE_ASSET_PACK=/icons/
+VITE_LANGUAGE_PACK=../../langs/flows-lang.js
+VITE_ASSET_PACK=langs/icons
 VITE_FONT_FACE_MONO="Courier New", Courier, monospace
 VITE_FONT_FACE="Helvetica Neue", Helvetica, Arial, sans-serif
