--- a/packages/unified-server/package.json
+++ b/packages/unified-server/package.json
@@ -171,6 +171,7 @@
   "dependencies": {
     "@google-labs/breadboard": "0.33.0",
     "@breadboard-ai/board-server": "0.13.0",
+    "@breadboard-ai/board-server-management": "1.20.1",
     "@breadboard-ai/connection-server": "0.5.1",
     "@breadboard-ai/connection-client": "0.2.0",
     "@breadboard-ai/data-store": "0.3.2",
