--- a/packages/breadboard/package.json
+++ b/packages/breadboard/package.json
@@ -180,6 +180,7 @@
     "@breadboard-ai/jsandbox": "0.5.0",
     "@breadboard-ai/types": "0.6.0",
     "@google-labs/breadboard-schema": "^1.13.0",
-    "json-schema": "^0.4.0"
+    "json-schema": "^0.4.0",
+    "signal-utils": "^0.21.1"
   }
 }
