--- a/packages/visual-editor/package.json
+++ b/packages/visual-editor/package.json
@@ -274,6 +274,7 @@
     "vitest": "^3.0.9"
   },
   "dependencies": {
+    "@breadboard-ai/a2": "^0.3.0",
     "@breadboard-ai/bbrt": "0.2.1",
     "@breadboard-ai/board-server-management": "1.20.1",
     "@breadboard-ai/board-server-utils": "0.1.9",
