--- a/packages/a2/package.json
+++ b/packages/a2/package.json
@@ -21,6 +21,7 @@
       ],
       "files": [
         "src/**/*.ts",
+        "bgl/**/*.bgl.json",
         "tsconfig.json",
         "../../core/tsconfig/base.json"
       ]
