--- a/packages/filesystem-board-server/package.json
+++ b/packages/filesystem-board-server/package.json
@@ -84,6 +84,7 @@
   "dependencies": {
     "@breadboard-ai/build": "0.12.1",
     "@breadboard-ai/data-store": "0.3.2",
+    "@breadboard-ai/types": "0.6.0",
     "@google-labs/breadboard": "^0.33.0",
     "@google-labs/breadboard-schema": "^1.13.0"
   }
