Tweak tsconfig some more.

--- a/packages/a2/tsconfig.json
+++ b/packages/a2/tsconfig.json
@@ -22,6 +22,6 @@
     "types": ["vite/client"]
   },
   "include": ["src/**/*.ts", "bgl/**/*.bgl.json"],
-  "exclude": ["bgl/src"],
+  "exclude": ["bgl/src/**/*.ts"],
   "extends": "@google-labs/tsconfig/base.json"
 }
