Disable wireit caching

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           node-version: 20
           cache: npm
-      - uses: google/wireit@setup-github-actions-caching/v2
+      # - uses: google/wireit@setup-github-actions-caching/v2
       - uses: actions/configure-pages@v5
 
       - run: npm ci
