Update wireit version and restore caching

--- a/.github/workflows/labs-prototypes-ci.yml
+++ b/.github/workflows/labs-prototypes-ci.yml
@@ -31,8 +31,8 @@ jobs:
       - run: pip install packages/breadboard-python/breadboard_python
       - run: pip install packages/breadboard-python/breadboard_colab
 
-      # - uses: google/wireit@setup-github-actions-caching/v2
-      #   if: github.event_name != 'pull_request' # For PRs, caching is disabled to ensure a clean build
+      - uses: google/wireit@setup-github-actions-caching/v2
+        if: github.event_name != 'pull_request' # For PRs, caching is disabled to ensure a clean build
 
       - name: Clean Installing dependencies
         run: npm run ci
