--- a/packages/a2/package.json
+++ b/packages/a2/package.json
@@ -64,7 +64,7 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
-    "@breadboard-ai/embedded-board-server": "^0.0.1",
+    "@breadboard-ai/embedded-board-server": "0.0.1",
     "@google-labs/breadboard": "^0.33.0"
   }
 }
