--- a/packages/embedded-board-server/tsconfig.json
+++ b/packages/embedded-board-server/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
-    "rootDir": ".",
-    "outDir": "./dist",
     "target": "ES2020",
     "module": "ESNext",
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
     "experimentalDecorators": true,
     "useDefineForClassFields": false,
+    "outDir": "dist",
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -21,7 +20,6 @@
     "noFallthroughCasesInSwitch": true,
     "types": ["vite/client"]
   },
-  "include": ["src/**/*.ts", "bgl/**/*.bgl.json"],
-  "exclude": ["bgl/src/**/*.ts"],
+  "include": ["src/**/*.ts", "tests/**/*.ts"],
   "extends": "@google-labs/tsconfig/base.json"
 }
