--- a/packages/unified-server/.env.development
+++ b/packages/unified-server/.env.development
@@ -1,5 +1,5 @@
 VITE_CONNECTION_SERVER_URL=/connection/
-VITE_LANGUAGE_PACK=@breadboard-ai/shared-ui/strings/en_US
+VITE_LANGUAGE_PACK=./opal-lang.js
 VITE_ASSET_PACK=langs/icons
 VITE_FONT_FACE_MONO="Google Sans Code", "Courier New", Courier, monospace
 VITE_FONT_FACE="Google Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
