--- a/packages/unified-server/.env.production
+++ b/packages/unified-server/.env.production
@@ -1,7 +1,7 @@
 # To connect the Visual Editor to a Connection Server, provide the Connection
 # Server URL here.
 VITE_CONNECTION_SERVER_URL=/connection/
-VITE_LANGUAGE_PACK=@breadboard-ai/shared-ui/strings/en_US
+VITE_LANGUAGE_PACK=./opal-lang.js
 VITE_ASSET_PACK=langs/icons
 VITE_FONT_FACE_MONO="Google Sans Code", "Courier New", Courier, monospace
 VITE_FONT_FACE="Google Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
