--- a/packages/unified-server/.env.development
+++ b/packages/unified-server/.env.development
@@ -3,4 +3,4 @@ VITE_LANGUAGE_PACK=@breadboard-ai/shared-ui/strings/en_US
 VITE_ASSET_PACK=/icons/
 VITE_FONT_FACE_MONO="Courier New", Courier, monospace
 VITE_FONT_FACE="Helvetica Neue", Helvetica, Arial, sans-serif
-VITE_FORCED_BOARD_SERVICE_NAME='GoogleDriveBoardService'
+VITE_BOARD_SERVICE='drive:'
