Add "Create New Document" button to Google Drive picker.

--- a/packages/shared-ui/package.json
+++ b/packages/shared-ui/package.json
@@ -151,7 +151,7 @@
     "@lit/task": "^1.0.2",
     "@pixi/math-extras": "^7.4.3",
     "@types/gapi": "^0.0.47",
-    "@types/gapi.drive": "^0.0.9",
+    "@types/gapi.client.drive-v3": "^0.0.5",
     "@types/google.picker": "^0.0.50",
     "@typescript/vfs": "^1.6.1",
     "@valtown/codemirror-continue": "^2.3.1",
