--- a/packages/unified-server/.env.production
+++ b/packages/unified-server/.env.production
@@ -6,3 +6,4 @@ VITE_ASSET_PACK=/icons/
 VITE_FONT_FACE_MONO="Courier New", Courier, monospace
 VITE_FONT_FACE="Helvetica Neue", Helvetica, Arial, sans-serif
 VITE_BOARD_SERVICE="/board/"
+VITE_ENABLE_TOS=false
