--- a/packages/shared-ui/src/sideboards/sideboards-bgl/generate-app-theme.bgl.json
+++ b/packages/shared-ui/src/sideboards/sideboards-bgl/generate-app-theme.bgl.json
@@ -22,7 +22,7 @@
           "role": "user",
           "parts": [
             {
-              "text": "## Context\nYou are creating an app splash screen for a mobile web app. You should use the context to understand what the web is called as well as any other requirements for the splash screen.\n\n## Style\nYou should create something unique and interesting, avoiding cliches and obvious motifs. You should use relatively few colors. The background must be a solid color without any adornments. You should also use the context to understand if there are additional instructions on what the style and contents should be. Under no circumstances should you ever deviate from the colors provided or use text in the splash screen.\n\n## Format\nThe image absolutely must be a portrait image in a 9/16 ratio, suitable for use on a mobile device's application launch screen. The contents of the image should be centered, leaving plenty of room around it for any background color. The image must be very high resolution and clear."
+              "text": "## Context\nYou are creating an app splash screen for a mobile web app. You should use the context to understand what the web is called as well as any other requirements for the splash screen.\n\n## Style\nYou should create something unique and interesting, avoiding cliches and obvious motifs. You should use relatively few colors. The background must be a solid color without any adornments. Use a background color that would also be suitable as the background color of a mobile webapp. You should also use the context to understand if there are additional instructions on what the style and contents should be. Under no circumstances should you ever deviate from the colors provided or use text in the splash screen.\n\n## Format\nThe image absolutely must be a portrait image in a 9/16 ratio, suitable for use on a mobile device's application launch screen. The contents of the image should be centered, leaving plenty of room around it for any background color. The image must be very high resolution and clear."
             }
           ]
         },
@@ -65,17 +65,20 @@
           "collapsed": "expanded",
           "outputHeight": 184
         },
-        "logLevel": "info"
+        "logLevel": "info",
+        "userModified": false
       },
       "configuration": {
         "description": {
+          "role": "user",
           "parts": [
             {
-              "text": "Take the image and create a CSS color scheme for it that would work for a web app. You must create four complementary colors:\n\n1. primaryColor: used for headings and calls to action. It should be complementary to the colors used in the image provided.\n2. secondaryColor: used for any incidental details. It should be different to the primary color, but still complementary to the image provided.\n3. backgroundColor: used for the background color of the app. This is the same color as the background of the image you received.\n4. textColor: used for any body text. This must be high contrast compared to backgroundColor.\n5. primaryTextColor: used for any text sitting in a call to action. This must be complementary and high contrast compared to the primaryColor.\n\nRespond in JSON in the following format:\n\n```json\n{\n  primaryColor: string,\n  secondaryColor: string,\n  backgroundColor: string,\n  textColor: string,\n  primaryTextColor: string\n}\n```"
+              "text": "You are an expert visual designer well-versed in color theory. Your job is to take an image and create a CSS color scheme to pair with it. Aesthetics are crucial and must be suitable for a designer-quality website. You must create a coherent website theme composed of 5 colors:\n\n1. backgroundColor: used for the background color of the app. This must be the same color as the background of the image you received.\n2. primaryColor: used for headings and calls to action. It should be high contrast relative to the background.\n3. secondaryColor: used for any incidental details. It should be different from the primary color, but still high contrast relative to the background. Prefer a color that is a variation of the primary color (monochromatic color scheme), or an adjacent color (analogous color scheme). Do *not* pick a color opposite on the color wheel.\n4. textColor: used for any body text. This must be high contrast compared to backgroundColor.\n5. primaryTextColor: used for any text sitting in a call to action. This must be complementary and high contrast compared to the primaryColor.\n\nPlease do your best to follow Material 3 color design principles. Avoid brown or beige hues unless explicitly requested.\n\nStart by selecting the backgroundColor, aiming for a perfect match with the provided image. Now that you have the backgroundColor, select the textColor and the primaryColor, both of which must display well on top of the backgroundColor. Finally, select the primaryTextColor for use on the primary-colored CTAs, the textColor for display on the backgroundColor, and the secondaryColor for accents also displayed on the backgroundColor.\n\nRespond in JSON in the following format:\n\n```json\n{\n  primaryColor: string,\n  secondaryColor: string,\n  backgroundColor: string,\n  textColor: string,\n  primaryTextColor: string\n}\n```"
             }
-          ],
-          "role": "user"
-        }
+          ]
+        },
+        "p-chat": false,
+        "p-list": false
       }
     },
     {
