--- a/packages/unified-server/package.json
+++ b/packages/unified-server/package.json
@@ -177,6 +177,7 @@
     "@breadboard-ai/data-store": "0.3.3",
     "@breadboard-ai/remote-board-server": "1.22.0",
     "@breadboard-ai/shared-ui": "1.25.0",
+    "@breadboard-ai/types": "^0.7.0",
     "@breadboard-ai/visual-editor": "1.28.0",
     "@google-labs/breadboard": "0.34.0",
     "@lit/context": "^1.1.4",
