--- a/packages/a2/package.json
+++ b/packages/a2/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "push": "tsx scripts/push.ts",
     "build": "wireit",
-    "sync-boards": "tsx ./scripts/sync-boards.ts"
+    "sync-boards": "ts-node ./scripts/sync-boards.ts"
   },
   "wireit": {
     "build": {
@@ -63,6 +63,7 @@
     "@typescript-eslint/parser": "^7.18.0",
     "dotenv": "^16.4.7",
     "glob": "^11.0.2",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3"
   },
