--- a/packages/a2/package.json
+++ b/packages/a2/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "push": "tsx scripts/push.ts",
-    "build": "wireit",
-    "sync-boards": "tsx ./scripts/sync-boards.ts"
+    "build": "wireit"
   },
   "wireit": {
     "build": {
@@ -57,12 +56,10 @@
   "homepage": "https://github.com/breadboard-ai/breadboard#readme",
   "devDependencies": {
     "@google-cloud/firestore": "^7.11.0",
-    "@types/glob": "^8.1.0",
     "@types/node": "^22.0.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "dotenv": "^16.4.7",
-    "glob": "^11.0.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3"
   },
