Re-add sync bgl TS files to bgl.json script.
Also perfom one off sync of TS files to bgl.json files.

Gemini generated summary of .bgl.json changes

The changes across the \*.bgl.json files primarily involve code cleanup within the embedded JavaScript modules and some minor formatting adjustments.

**Key Change Types:**

1. **Widespread Removal of JavaScript Import Statements:**
   * This is the most common change. Numerous import statements were removed from the code property of modules across almost all \*.bgl.json files.
   * **Examples:**
     * packages/a2/bgl/\_connector-template.bgl.json: Removed imports like err, ok from "./a2/utils".
     * packages/a2/bgl/a2.bgl.json: Extensive removals in modules like entry, join, tool-manager, worker-worker, agent-main, researcher, image-generator, structured-response, template, audio-generator, text-entry, make-code, gemini-prompt, image-editor, introducer, html-generator, render-outputs, lists, connector-manager, and image-utils. Specific utilities like toLLMContent, err, ok, llm, and references to ./common were frequently removed.
     * packages/a2/bgl/audio-generator.bgl.json: Removed imports for gemini, various utils, Template, ToolManager, and common.
     * packages/a2/bgl/fetch-workbench.bgl.json: Removed @output and @query imports.
     * packages/a2/bgl/generate-text.bgl.json: Removed utils like llm and listPrompt.
     * packages/a2/bgl/generate.bgl.json: Removed import for ./a2/common.
     * packages/a2/bgl/gmail.bgl.json: Removed utils, read, and write imports from configurator, and @describe from get-emails.
     * packages/a2/bgl/go-over-list.bgl.json: Extensive removals across most modules, including GeminiPrompt, gemini, common, various utils, report, StructuredResponse, plannerPrompt, getPlan, and types.
     * packages/a2/bgl/google-drive.bgl.json: Removed utils from configurator, modified fetch import in api, and removed @describe and utils from connector-save and connector-load.
     * packages/a2/

--- a/packages/a2/tsconfig.json
+++ b/packages/a2/tsconfig.json
@@ -2,12 +2,12 @@
   "compilerOptions": {
     "rootDir": ".",
     "outDir": "./dist",
-    "target": "ES2020",
-    "module": "ESNext",
+    "target": "ES2022",
+    "module": "Preserve",
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
     "experimentalDecorators": true,
-    "useDefineForClassFields": false,
+    "useDefineForClassFields": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
