Add missing docker arg

--- a/packages/unified-server/Dockerfile
+++ b/packages/unified-server/Dockerfile
@@ -13,6 +13,7 @@ RUN npm clean-install
 ARG VITE_BOARD_SERVICE
 ARG VITE_GOOGLE_DRIVE_PUBLIC_API_KEY
 ARG VITE_GOOGLE_DRIVE_FEATURED_GALLERY_FOLDER_ID
+ARG VITE_GOOGLE_DRIVE_PUBLISH_PERMISSIONS
 
 # Built-time vars
 ENV VITE_BOARD_SERVICE=${VITE_BOARD_SERVICE:-/board/}
