Add VITE_GOOGLE_DRIVE_USER_FOLDER_NAME var

--- a/packages/unified-server/Dockerfile
+++ b/packages/unified-server/Dockerfile
@@ -14,6 +14,7 @@ ARG VITE_BOARD_SERVICE
 ARG VITE_GOOGLE_DRIVE_PUBLIC_API_KEY
 ARG VITE_GOOGLE_DRIVE_FEATURED_GALLERY_FOLDER_ID
 ARG VITE_GOOGLE_DRIVE_PUBLISH_PERMISSIONS
+ARG VITE_GOOGLE_DRIVE_USER_FOLDER_NAME
 
 # Built-time vars
 ENV VITE_BOARD_SERVICE=${VITE_BOARD_SERVICE:-/board/}
