--- a/packages/unified-server/.env.development
+++ b/packages/unified-server/.env.development
@@ -5,3 +5,4 @@ VITE_FONT_FACE_MONO="Courier New", Courier, monospace
 VITE_FONT_FACE="Helvetica Neue", Helvetica, Arial, sans-serif
 VITE_ENABLE_TOS=false
 VITE_TOS_HTML_PATH=""
+VITE_GOOGLE_DRIVE_USER_FOLDER_NAME="Breadboard Dev"
