--- a/packages/a2/package.json
+++ b/packages/a2/package.json
@@ -65,6 +65,7 @@
   },
   "dependencies": {
     "@breadboard-ai/embedded-board-server": "0.1.0",
+    "@breadboard-ai/types": "0.7.0",
     "@google-labs/breadboard": "^0.34.0"
   }
 }
