--- a/packages/shared-ui/package.json
+++ b/packages/shared-ui/package.json
@@ -154,6 +154,7 @@
     "@lit-labs/signals": "^0.1.2",
     "@lit/context": "^1.1.4",
     "@lit/task": "^1.0.2",
+    "@material/web": "^2.3.0",
     "@pixi/math-extras": "^7.4.3",
     "@types/gapi": "^0.0.47",
     "@types/gapi.client.drive-v3": "^0.0.5",
