Add STORAGE_BUCKET to the list of Dockerfile args.

--- a/packages/unified-server/Dockerfile
+++ b/packages/unified-server/Dockerfile
@@ -10,6 +10,7 @@ COPY --from=breadboard / .
 
 RUN npm clean-install
 
+ARG STORAGE_BUCKET
 ARG VITE_BOARD_SERVICE
 ARG VITE_GOOGLE_DRIVE_PUBLIC_API_KEY
 ARG VITE_GOOGLE_DRIVE_FEATURED_GALLERY_FOLDER_ID
