Add STORAGE_BUCKET and SERVER_URL args to Dockerfile.

--- a/packages/unified-server/Dockerfile
+++ b/packages/unified-server/Dockerfile
@@ -11,6 +11,7 @@ COPY --from=breadboard / .
 RUN npm clean-install
 
 ARG STORAGE_BUCKET
+ARG SERVER_URL
 ARG VITE_BOARD_SERVICE
 ARG VITE_GOOGLE_DRIVE_PUBLIC_API_KEY
 ARG VITE_GOOGLE_DRIVE_FEATURED_GALLERY_FOLDER_ID
@@ -29,6 +30,8 @@ ENV CONNECTIONS_FILE="/breadboard/packages/unified-server/secrets/secrets.json"
 ENV NODE_ENV="production"
 ENV FIRESTORE_DB_NAME="unified-server"
 ENV VITE_GOOGLE_DRIVE_PUBLIC_API_KEY=${VITE_GOOGLE_DRIVE_PUBLIC_API_KEY}
+ENV STORAGE_BUCKET=${STORAGE_BUCKET}
+ENV SERVER_URL=${SERVER_URL}
 
 EXPOSE 3000
 
