--- a/packages/shared-ui/package.json
+++ b/packages/shared-ui/package.json
@@ -135,6 +135,7 @@
     "vitest": "^3.1.1"
   },
   "dependencies": {
+    "@breadboard-ai/a2": "0.4.0",
     "@breadboard-ai/build": "0.12.2",
     "@breadboard-ai/connection-client": "0.2.0",
     "@breadboard-ai/data-store": "0.3.3",
