--- a/packages/visual-editor/package.json
+++ b/packages/visual-editor/package.json
@@ -208,6 +208,7 @@
     "@breadboard-ai/board-server-management": "1.21.0",
     "@breadboard-ai/board-server-utils": "0.1.10",
     "@breadboard-ai/data-store": "0.3.3",
+    "@breadboard-ai/embed": "0.0.1",
     "@breadboard-ai/google-drive-kit": "0.6.0",
     "@breadboard-ai/idb-board-server": "1.19.4",
     "@breadboard-ai/jsandbox": "0.6.0",
