--- a/packages/unified-server/Dockerfile
+++ b/packages/unified-server/Dockerfile
@@ -18,6 +18,7 @@ ARG VITE_GOOGLE_DRIVE_FEATURED_GALLERY_FOLDER_ID
 ARG VITE_GOOGLE_DRIVE_PUBLISH_PERMISSIONS
 ARG VITE_GOOGLE_DRIVE_USER_FOLDER_NAME
 ARG VITE_FEEDBACK_LINK
+ARG VITE_VALID_REDIRECT_URI_ORIGINS
 
 # Built-time vars
 ENV VITE_BOARD_SERVICE=${VITE_BOARD_SERVICE:-/board/}
