--- a/packages/board-server/package.json
+++ b/packages/board-server/package.json
@@ -64,8 +64,7 @@
       ],
       "dependencies": [
         "<dependencies>#build",
-        "../core-kit#build",
-        "../template-kit#build"
+        "../core-kit#build"
       ]
     },
     "build:esbuild": {
