--- a/packages/board-server/package.json
+++ b/packages/board-server/package.json
@@ -63,8 +63,7 @@
         "package.json"
       ],
       "dependencies": [
-        "<dependencies>#build",
-        "../core-kit#build"
+        "<dependencies>#build"
       ]
     },
     "build:esbuild": {
@@ -153,6 +152,7 @@
     "@google-cloud/secret-manager": "^6.0.1",
     "@google-cloud/storage": "^7.15.2",
     "@google-labs/breadboard": "^0.34.0",
+    "@google-labs/core-kit": "^0.19.0",
     "@lit/context": "^1.1.4",
     "@types/express": "^5.0.1",
     "better-sqlite3": "^11.9.1",
