--- a/packages/idb-board-server/tsconfig.json
+++ b/packages/idb-board-server/tsconfig.json
@@ -18,8 +18,7 @@
     "noUnusedLocals": false,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "types": ["vite/client"]
   },
-  "include": ["src/**/*.ts", "tests/**/*.ts"],
+  "include": ["src/**/*.ts"],
   "extends": "@google-labs/tsconfig/base.json"
 }
