--- a/packages/remote-board-server/package.json
+++ b/packages/remote-board-server/package.json
@@ -65,27 +65,13 @@
   },
   "homepage": "https://github.com/breadboard-ai/breadboard/tree/main/packages/remote-board-server#readme",
   "devDependencies": {
-    "@ava/typescript": "^4.0.0",
-    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@google-labs/tsconfig": "^0.0.1",
-    "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "ava": "^5.2.0",
-    "dotenv": "^16.4.7",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.3",
-    "vite": "^6.2.7",
-    "vite-plugin-full-reload": "^1.2.0",
-    "vite-plugin-watch-and-run": "^1.7.4",
-    "vitest": "^3.1.1"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@breadboard-ai/connection-client": "0.2.0",
-    "@breadboard-ai/data-store": "0.3.3",
     "@breadboard-ai/types": "0.7.0",
-    "@google-labs/breadboard": "^0.34.0",
-    "@google-labs/breadboard-schema": "^1.14.0"
+    "@google-labs/breadboard": "^0.34.0"
   }
 }
