--- a/packages/visual-editor/package.json
+++ b/packages/visual-editor/package.json
@@ -194,21 +194,14 @@
   },
   "homepage": "https://github.com/breadboard-ai/breadboard/tree/main/packages/visual-editor#readme",
   "devDependencies": {
-    "@ava/typescript": "^4.0.0",
-    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@google-labs/tsconfig": "^0.0.1",
-    "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "ava": "^5.2.0",
     "dotenv": "^16.4.7",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
     "vite": "^6.2.7",
     "vite-plugin-full-reload": "^1.2.0",
-    "vite-plugin-watch-and-run": "^1.7.4",
-    "vitest": "^3.1.1"
+    "vite-plugin-watch-and-run": "^1.7.4"
   },
   "dependencies": {
     "@breadboard-ai/a2": "0.4.0",
@@ -220,25 +213,14 @@
     "@breadboard-ai/jsandbox": "0.6.0",
     "@breadboard-ai/shared-ui": "1.25.0",
     "@breadboard-ai/types": "0.7.0",
-    "@codemirror/autocomplete": "^6.18.6",
-    "@codemirror/commands": "^6.8.0",
-    "@codemirror/lang-javascript": "^6.2.3",
     "@google-labs/breadboard": "^0.34.0",
     "@google-labs/core-kit": "^0.19.0",
     "@lit/context": "^1.1.4",
-    "@lit/task": "^1.0.2",
     "@types/gapi": "^0.0.47",
     "@types/gapi.client.drive-v3": "^0.0.5",
     "@types/google.picker": "^0.0.50",
-    "@types/jszip": "^3.4.1",
-    "ajv": "^8.17.1",
     "codemirror": "^6.0.1",
     "idb": "^8.0.2",
-    "idb-keyval": "^6.2.1",
-    "jszip": "^3.10.1",
-    "lit": "^3.3.0",
-    "markdown-it": "^14.1.0",
-    "pdfjs-dist": "^5.1.91",
-    "prettier": "^3.5.3"
+    "lit": "^3.3.0"
   }
 }
