--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     { "path": "packages/idb-board-server" },
     { "path": "packages/schema" },
     { "path": "packages/shared-ui" },
+    { "path": "packages/theme" },
     { "path": "packages/types" },
     { "path": "packages/visual-editor" }
   ]
