updated package.json/tsconfig.json to make the tests runnable

--- a/packages/google-drive-kit/tsconfig.json
+++ b/packages/google-drive-kit/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "rootDir": "src",
     "outDir": "dist",
     "tsBuildInfoFile": "dist/.tsbuildinfo",
     "target": "ES2022",
@@ -21,6 +20,6 @@
     "verbatimModuleSyntax": true,
     "useUnknownInCatchVariables": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*", "tests/**/*"],
   "exclude": []
 }
