--- a/packages/unified-server/.env.development
+++ b/packages/unified-server/.env.development
@@ -6,3 +6,4 @@ VITE_FONT_FACE="Helvetica Neue", Helvetica, Arial, sans-serif
 VITE_ENABLE_TOS=false
 VITE_TOS_HTML_PATH=""
 VITE_GOOGLE_DRIVE_USER_FOLDER_NAME="Breadboard Dev"
+VITE_ENVIRONMENT_NAME="dev"
