--- a/packages/unified-server/.env.production
+++ b/packages/unified-server/.env.production
@@ -7,5 +7,6 @@ VITE_FONT_FACE_MONO="Courier New", Courier, monospace
 VITE_FONT_FACE="Helvetica Neue", Helvetica, Arial, sans-serif
 VITE_ENABLE_TOS=false
 VITE_TOS_HTML_PATH=""
+VITE_ENVIRONMENT_NAME="prod"
 # Uncomment when ready to disable all non-A2 module invocations.
 # VITE_NO_3P_MODULES="true"
