--- a/packages/visual-editor/.env.development
+++ b/packages/visual-editor/.env.development
@@ -6,3 +6,4 @@ VITE_FONT_FACE="Helvetica Neue", Helvetica, Arial, sans-serif
 VITE_ENABLE_TOS=false
 VITE_TOS_HTML_PATH=""
 VITE_FEEDBACK_LINK=""
+VITE_ENVIRONMENT_NAME="dev"
