--- a/packages/visual-editor/.env.production
+++ b/packages/visual-editor/.env.production
@@ -8,3 +8,4 @@ VITE_FONT_FACE="Helvetica Neue", Helvetica, Arial, sans-serif
 VITE_ENABLE_TOS=false
 VITE_TOS_HTML_PATH=""
 VITE_FEEDBACK_LINK=""
+VITE_ENVIRONMENT_NAME="prod"
