Add the VITE_ENVIRONMENT_NAME to Dockerfile.

--- a/packages/unified-server/Dockerfile
+++ b/packages/unified-server/Dockerfile
@@ -19,6 +19,7 @@ ARG VITE_GOOGLE_DRIVE_PUBLISH_PERMISSIONS
 ARG VITE_GOOGLE_DRIVE_USER_FOLDER_NAME
 ARG VITE_FEEDBACK_LINK
 ARG VITE_VALID_REDIRECT_URI_ORIGINS
+ARG VITE_ENVIRONMENT_NAME
 
 # Built-time vars
 ENV VITE_BOARD_SERVICE=${VITE_BOARD_SERVICE:-/board/}
