Update TOS and Policy

--- a/packages/unified-server/.env.development
+++ b/packages/unified-server/.env.development
@@ -9,3 +9,5 @@ VITE_FONT_LINK="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,w
 VITE_GOOGLE_DRIVE_USER_FOLDER_NAME="Opals"
 
 VITE_ENVIRONMENT_NAME="dev"
+VITE_ENABLE_POLICY=true
+VITE_POLICY_HTML_PATH="public/policy.html"
