--- a/packages/unified-server/.env.production
+++ b/packages/unified-server/.env.production
@@ -12,3 +12,5 @@ VITE_ENVIRONMENT_NAME="prod"
 # VITE_NO_3P_MODULES="true"
 
 VITE_FONT_LINK="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&display=block"
+VITE_ENABLE_POLICY=true
+VITE_POLICY_HTML_PATH="public/policy.html"
