disabled ui-tests on github for now

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     },
     "test": {
       "dependencies": [
-        "<workspaces>#<this>"
+        "<workspaces>#<this>",
+        "!./packages/ui-tests#<this>"
       ]
     },
     "lint": {
