Update font in env

--- a/packages/unified-server/.env.production
+++ b/packages/unified-server/.env.production
@@ -5,12 +5,14 @@ VITE_LANGUAGE_PACK=./opal-lang.js
 VITE_ASSET_PACK=langs/icons
 VITE_FONT_FACE_MONO="Google Sans Code", "Courier New", Courier, monospace
 VITE_FONT_FACE="Google Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
+VITE_FONT_FACE_FLEX="Google Sans Flex", "Helvetica Neue", Helvetica, Arial, sans-serif
+VITE_FONT_LINK="https://fonts.googleapis.com/css2?family=Google+Sans+Code&family=Google+Sans+Flex:opsz,wght,ROND@6..144,1..1000,100&family=Google+Sans:opsz,wght@17..18,400..700&display=block"
+
 VITE_ENABLE_TOS=true
 VITE_TOS_HTML_PATH="public/tos.html"
 VITE_ENVIRONMENT_NAME="prod"
 # Uncomment when ready to disable all non-A2 module invocations.
 # VITE_NO_3P_MODULES="true"
 
-VITE_FONT_LINK="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&display=block"
 VITE_ENABLE_POLICY=true
 VITE_POLICY_HTML_PATH="public/policy.html"
