Plumb ClientDeploymentConfiguration to app view too

--- a/packages/unified-server/package.json
+++ b/packages/unified-server/package.json
@@ -86,7 +86,8 @@
       ],
       "dependencies": [
         "../board-server#build:tsc",
-        "../connection-server#build:tsc"
+        "../connection-server#build:tsc",
+        "../shared-ui#build:tsc"
       ]
     },
     "serve": {
