--- a/packages/particles-ui-demo/package.json
+++ b/packages/particles-ui-demo/package.json
@@ -73,5 +73,8 @@
   "devDependencies": {
     "@google-labs/tsconfig": "^0.0.1",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "signal-utils": "^0.21.1"
   }
 }
