[particles-ui-demo] Add basic UI

--- a/packages/particles-ui-demo/tsconfig.json
+++ b/packages/particles-ui-demo/tsconfig.json
@@ -1,8 +1,25 @@
 {
   "compilerOptions": {
-    "composite": true,
-    "outDir": "./dist"
+    "target": "ES2020",
+    "module": "ESNext",
+    "lib": ["ES2023", "DOM", "DOM.Iterable"],
+    "skipLibCheck": true,
+    "useDefineForClassFields": false,
+    "rootDir": "src",
+    "outDir": "dist",
+    "tsBuildInfoFile": "dist/.tsbuildinfo",
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*", "tests/**/*"],
+  "include": ["src/**/*.ts"],
   "extends": "@google-labs/tsconfig/base.json"
 }
